  * Force cursor to stay on the first column during multiselect questions in
    the GTK+ frontend.  (Closes: #398902)
  * Remove useless debug messages in progress handling of the GTK+ frontend.
    (Closes: #455981)
  * Show progress widgets and restore main title after handling a GO in the
    GTK+ frontend.  (Closes: #464380)
  * Add a case for the previous issue in the "progress" test suite.

 -- Colin Watson <cjwatson@debian.org>  Tue, 22 Jan 2008 15:44:34 +0000

cdebconf (0.126) unstable; urgency=low

  * debconf-copydb: Unset DEBCONF_DROP_TRANSLATIONS so that we always copy
    all translations.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Slovak (sk.po) by Ivan Masár

 -- Colin Watson <cjwatson@debian.org>  Mon, 31 Dec 2007 23:07:12 +0000

cdebconf (0.125) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Do not build the GTK+ frontend with -Wcast-align: GTK_PROGRESS_BAR() is
    has alignment problems on hppa, mips and mipsel.
  * Do not hide the gcc command line in globalmakeflags: this makes a lot
    harder for buildd admins to understand build failures.
  * Fix lintian warning debian-rules-ignores-make-clean-error.
  * Bump Standards-Version to 3.7.2.2 (no changes required).
  * Use ${binary:Version} instead of the deprecated ${Source-Version}.
  * Merge duplicate Depends fields for cdebconf.
  * Add myself to Uploaders.

 -- Jérémy Bobbio <lunar@debian.org>  Sun, 07 Oct 2007 16:40:38 +0200

cdebconf (0.124) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Load frontend with RTLD_NOW | RTLD_GLOBAL to allow plugins to access
    frontend API without requiring calls to dlsym().  Kudos to Steve Langasek
    for the help to figure this out!
  * Put frontend plugins symbol in the "cdebconf_" namespaces.  The old
    symbols are still looked up as a fallback to ensure compatibility.