@@ -69,7 +69,7 @@ echo "SUBST test/select EXTRA-TRANS translated item 1, translated item 2"
 read ans
 debug "subst test/select EXTRA-TRANS ANS: $ans"
 
-for t in boolean multiselect note password select string text; do
+for t in boolean boolean-no-default multiselect note password select string text; do
 	askquestion "test/$t" critical
 done
 
