@@ -21,6 +21,11 @@ Default: true
 Description: Enter a boolean value
  This is the prompt for a boolean-type question
 
+Template: test/boolean-no-default
+Type: boolean
+Description: Enter a boolean value
+ This is the prompt for a boolean-type question with no default
+
 Template: test/multiselect
 Type: multiselect
 Default: bar, baz
