@@ -13,6 +13,9 @@ cdebconf (0.127) UNRELEASED; urgency=low
   * Show progress widgets and restore main title after handling a GO in the
     GTK+ frontend.  (Closes: #464380)
   * Add a case for the previous issue in the "progress" test suite.
+  * Correctly handle boolean question without a default in the GTK+ frontend.
+    (Closes: #457901)
+  * Add a case for the previous issue in the test suite.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 22 Jan 2008 15:44:34 +0000
 
